--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gh-pages -d lap"
   },
   "author": "",
   "license": "ISC",
+  "homepage": "https://chaitanya-perikila.github.io/landing-page",
   "dependencies": {
     "gh-pages": "^3.1.0"
   }
